@@ -1,0 +1,11 @@
+<?php
+defined('BASEPATH') OR exit('No direct script access allowed');
+?>
+<div>
+	<h2 style="color: blue">XML Server-Side Validation</h2>
+	<ul>
+		{xmlValidationResult}
+		<li style="color:blue">{message}</li>
+		{/xmlValidationResult}
+	</ul>
+</div>
