@@ -1,6 +1,7 @@
 Newest at the top
 YYYY-MM-DD HR:MIN - comment
 
+2016-03-28 18:44 - Server-side validation methods are created and it also passed
 2016-03-28 17:54 - Local Validation passed
 2016-03-28 17:45 - Changed each booking to be a table instead each row being a table
 2016-03-28 17:12 - Finished the timeslots facet 
